fixed img height on small screen

--- a/style.css
+++ b/style.css
@@ -138,7 +138,6 @@ main {
 
 @media screen and (max-width: 850px) {
     img {
-        object-fit: contain;
         min-height: 140px;
     }
     .box {
